i am very smart with css

--- a/src/Display/Display.css
+++ b/src/Display/Display.css
@@ -57,7 +57,7 @@ button {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .cards img {
