i am very smart with css still

--- a/src/Display/Display.css
+++ b/src/Display/Display.css
@@ -57,6 +57,7 @@ button {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  align-content: flex-start;
   align-items: flex-start;
 }
 
