--- a/src/Display/Display.css
+++ b/src/Display/Display.css
@@ -1,59 +1,17 @@
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-li {
+.landItem {
   text-transform: capitalize;
-  display: flex;
-  padding: 2px 20px;
-}
-
-li.checked {
-  background: #444;
-}
-
-label {
-  margin-left: 4px;
-}
-
-h3 {
-  background: #505050;
-  padding: 10px;
-  margin: 0;
-}
-
-h4 {
-  margin: 10px 0;
-  padding: 0 10px;
-}
-
-button {
-  text-transform: capitalize;
-  background: none;
-  border: 0;
-  color: #ddd;
-  outline: none;
-  cursor: pointer;
-}
-
-.side {
-  flex: 0 220px;
-  background: #2e497b;
-  color: #ddd;
-  font-family: sans-serif;
 }
 
 .display {
-  display: flex;
+  background: #bbb;
 }
 
-.display > *:not(:last-child) {
-  margin-bottom: 10px;
+.controls {
+  width: 280px;
+  height: 100%;
 }
 
 .cards {
-  flex: 1;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
